changed settings file

--- a/senawebsite/templates/senawebsite/index.html
+++ b/senawebsite/templates/senawebsite/index.html
@@ -105,7 +105,7 @@
 	<div class="services">
 		<div class="container">
 
-			<div class="row services_row">
+			<div class="row services_row"><br><br><br>
 				<!--<h3>{% if request.session.lang  == "en" %}Photo1 {% else %}ग्रामपंचायती तर्फे राबवले जाणारे विविध कार्यक्रम{% endif %}</h3><br><br><br>-->
                 <table class="image col-lg-5">
 					<tr>
@@ -118,16 +118,6 @@
 					</tr>
 				</table>
 
-				<table class="image col-lg-5">
-					<tr>
-						<th><img src="{%static 'images/photo1.jpg'%}" style="width:800px; padding-bottom:0.5em; padding-top:45px; height:600px"></th>
-
-					</tr>
-					<tr>
-                        <td class="caption"><h4 style="font-family: Arial Black">{% if request.session.lang  == "en" %}Photo2{% else %}मा. सरपंचा कडून ग्रामपंचायती मध्ये कर्मचाऱ्यांना त्यांच्या वाढदिवसा दिवशी एक रोप देण्याचा उपक्रम सुरू केला{% endif %}</h4></td>
-
-					</tr>
-				</table>
 
 
                 <table class="image col-lg-5">
