--- a/senawebsite/templates/senawebsite/index.html
+++ b/senawebsite/templates/senawebsite/index.html
@@ -6,12 +6,12 @@
 	{% if request.session.lang == "en" %}
         शिवसेना
      {% else %}
-		फोटो गॅलरी
+		शिवसेना
      {% endif %}
 </title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="description" content="Elected Member">
+<meta name="description" content="ShivsenaSaravali">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/styles/bootstrap4/bootstrap.min.css">
 <link href="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -19,9 +19,10 @@
 <link rel="stylesheet" type="text/css" href="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
 <link rel="stylesheet" type="text/css" href="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/plugins/OwlCarousel2-2.2.1/animate.css">
 <link rel="stylesheet" type="text/css" href="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/styles/news.css">
-<link rel="stylesheet" type="text/css" href="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/styles/news_responsive.css">
+<!--<link rel="stylesheet" type="text/css" href="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/styles/news_responsive.css">-->
 <link rel="stylesheet" type="text/css" href="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/styles/servicesSena.css">
-<link rel="stylesheet" type="text/css" href="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/styles/services_responsive.css">
+<link rel="stylesheet" type="text/css" href="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/styles/common.css">
+<!--<link rel="stylesheet" type="text/css" href="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/styles/services_responsive.css">-->
 	<style>
 
 .dropbtn {
@@ -65,13 +66,18 @@
 
 .column {
   float: left;
-  width: 25%;
+  width: 20%;
   padding: 5px;
 }
 
 .column1 {
   float: left;
-  width: 20%;
+  width: 33.33%;
+  padding: 5px;
+}
+.column2 {
+  float: left;
+  width: 40%;
   padding: 5px;
 }
 /* Clear floats after image containers */
@@ -99,7 +105,7 @@
 					<div class="col">
 						<div class="top_bar_content d-flex flex-row align-items-center justify-content-start">
 
-							<div class="top_bar_item" style="color:#FFFFFF; text-align: center; height: 15px; width: 600px; margin-left: 1px; font-size:200%; font-family: Arial Black; padding-left:33px;">{% if request.session.lang == "en" %}शिवसेने अंतर्गत सरावली ग्रामपंचायत{% else %}सरावली ग्रामपंचायत{% endif %}</div>
+							<div class="top_bar_item" style="color:#FFFFFF; text-align: center; height: 15px; width: 600px; margin-left: 1px; font-size:200%; font-family: Arial Black; padding-left:33px;"><h2>शिवसेना सरावली</h2></div>
 
 
 						</div>
@@ -120,58 +126,67 @@
 
 			<div class="row services_row">
 				<!--<h3>{% if request.session.lang  == "en" %}Different Events organised/Celebrated By Saravali Grampanchayat {% else %}ग्रामपंचायती तर्फे राबवले जाणारे विविध कार्यक्रम{% endif %}</h3><br><br><br>-->
-                <div class="row1">
+                <div class="row1" style="padding-top: 60px;">
   					<div class="column">
 						<img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/bal.jpg" alt="Snow" style="width:100%">
 
   					</div>
 
   					<div class="column">
-   		 				<img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/uddhav.jpg" alt="Forest" style="width:100%">
+   		 				<img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/uddhav.jpg" style="width:100%">
 						<div><img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/shivsena.jpg" alt="Snow" style="width:203%; padding-top:5px; height:215px;"></div>
   					</div>
   					<div class="column">
-    					<img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/aaditya.jpg" alt="Mountains" style="width:100%">
+    					<img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/aaditya.jpg"  style="width:100%">
   					</div>
 					<div class="column">
-    					<img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/aanand.jpg" alt="Mountains" style="width:100%">
+    					<img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/aanand.jpg"  style="width:100%">
+  					</div>
+					<div class="column">
+    					<img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/Eknath.jpg"  style="width:100%; padding-bottom:5px;">
+
   					</div>
 				</div>
 				<div style="padding-top:10px; padding-bottom:10px;"><b>फेब्रुवारी २०१७ मध्ये घेण्यात आलेल्या ग्रामपंचायत निवडणुकीमध्ये शिवसेनेने घवघवीत यश मिळवले. शिवसेनेचे निर्विवाद वर्चस्व स्थापन झाले. १६ पैकी १२ तसेच थेट लोकांमधून सरपंच बहुमताने निवडून सरावली ग्रामपंचायतीवर भगवा फडकवला.</b></div>
 				<div class="row1">
-  					<div class="column1">
-						<img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/bhai.jpg" alt="Snow" style="width:100%; padding-bottom:5px;">
+
+
+  					<div class="column2">
+						<img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/bhai.jpg" style="width:100%; padding-bottom:5px;">
 						<div><b>प्रभाकर रामचंद्र राऊळ ( भाई )</b></div>
 						<div>(पालघर लोकसभा संघटक)</div>
   					</div>
 
-					<div class="column1">
-    					<img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/jagdishDhodi.jpg" alt="Mountains" style="width:100%; padding-bottom:5px;">
+					<div class="column2">
+    					<img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/jagdishDhodi.jpg"  style="width:100%; padding-bottom:5px;">
 						<div><b>जगदीश भगवान धोडी ( भाऊ )</b></div>
 						<div>(कोंकण पाटबंधारे विकास महामंडळ उपाध्यक्ष)</div>
   					</div>
 
+				</div>
+				<div>
+
 					<div class="column1">
-    					<img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/ashokSalunkhe.jpg" alt="Mountains" style="width:100%; padding-bottom:5px;">
+    					<img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/ashokSalunkhe.jpg" style="width:100%; padding-bottom:5px;">
 						<div><b>अशोक साळुंखे</b></div>
 						<div>(शिवसेना सरावली शहरप्रमुख)</div>
   					</div>
 
   					<div class="column1">
-   		 				<img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/sarpanch1.jpg" alt="Forest" style="width:100%; padding-bottom:5px;">
+   		 				<img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/sarpanch1.jpg" style="width:100%; padding-bottom:5px;">
 						<div><b>लक्ष्मी जनार्दन चांदणे</b></div>
 						<div>(सरपंच)</div>
 
   					</div>
   					<div class="column1">
-    					<img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/deputySarpanch2.jpg" alt="Mountains" style="width:100%; padding-bottom:5px;">
+    					<img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/deputySarpanch2.jpg"  style="width:100%; padding-bottom:5px;">
 						<div><b>स्मिता रुपेश राऊत</b></div>
 						<div>(उप सरपंच)</div>
   					</div>
 
 				</div>
 				<div>
-					<img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/members.jpg" alt="Mountains" style="width:100%; padding-top:10px; padding-bottom:5px;">
+					<img src="https://s3.ap-south-1.amazonaws.com/grampanchayat/static/images/members.jpg"  style="width:100%; padding-top:10px; padding-bottom:5px;">
 					<div><b>निवडूण आलेले इतर सदस्य</b></div>
 				</div>
 
